# EDMA

./: .gitignore  README.md  debug_agents.py  pyproject.toml  requirements.txt
examples/: demo_client.py  demo_microscope_server.py  demo_server.py  test_sse.py  test_tk_thread.py
src/edma_mcp/client/: bridge.py  display_payloads.py  eventHubListener.py  execution_coordinator.py  executive.py  main.py  models.py  openai_bridge.py  orchestrator.py  plan_executor.py  plan_judge.py  planning_coordinator.py  thread_helper.py  workflow_coordinator.py
src/edma_mcp/server/: base.py  event.py  main.py  server.py
src/edma_mcp/skills/: __init__.py  execution.py  provider.py
src/edma_mcp/skills/playbooks/acquire_4d_stem/: SKILL.md
src/edma_mcp/skills/playbooks/idpc_visualization/: SKILL.md
src/edma_mcp/skills/playbooks/ptychography/: SKILL.md
src/edma_mcp/skills/playbooks/ptychography_on_sem/: SKILL.md
src/edma_mcp/skills/playbooks/ptychography_results_visualization/: SKILL.md
src/edma_mcp/skills/playbooks/recommend_4d_stem_parameters/: SKILL.md
src/edma_mcp/skills/playbooks/run_ptychography/: SKILL.md
src/edma_mcp/skills/playbooks/search_and_fft/: SKILL.md
src/edma_mcp/skills/playbooks/virtual_detector_visualization/: SKILL.md
src/emma_mcp/: client.py  server.py
src/emma_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py
