[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emma_mcp"
version = "0.1.0"
description = "A standard python package with client and server"
authors = [
    { name = "Meng Zhao", email = "zhaomenq@physik.hu-berlin.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
emma-server = "emma_mcp.server:main"
emma-client = "emma_mcp.client:main"
