[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edma_mcp"
version = "0.1.0"
description = "Event-driven Multi-agent MCP package"
authors = [
    { name = "Meng Zhao", email = "zhaomenq@physik.hu-berlin.de" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "starlette",
    "uvicorn",
    "httpx",
    "pydantic",
]

[project.scripts]
edma-server = "edma_mcp.server.main:main"
edma-client = "edma_mcp.client.main:main"
