[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edma_mcp"
version = "0.1.0"
description = "Event-driven Multi-agent MCP package"
authors = [
    { name = "Meng Zhao", email = "zhaomenq@physik.hu-berlin.de" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "starlette==0.52.1",
    "uvicorn==0.41.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "openai-agents>=0.12.0",
]

[project.scripts]
edma-server = "edma_mcp.server.main:main"
edma-client = "edma_mcp.client.main:main"
